--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "bootstrap": "^5.2.3"
+        "bootstrap": "^5.2.3",
+        "sass": "^1.62.0"
     }
 }
